[project]
name = "mcp-unified"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "arigofahreza", email = "arigoarg@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "mcp[cli]>=1.9.2",
    "oracledb>=3.1.1",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
mcp-unified = "mcp_unified:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
